# RosSummary

0. Dummy_Example/: README.md  run.sh
0. Dummy_Example/src/tello_bringup/: CMakeLists.txt  package.xml
0. Dummy_Example/src/tello_hardware/: CMakeLists.txt  package.xml
0. Dummy_Example/src/tello_hardware/src/: action_server.py  ask_move.py  position.py
0. Dummy_Example/src/tello_msgs/: package.xml
0. Dummy_Example/src/tello_msgs/action/: Mission.action
0. Dummy_Example/src/tello_msgs/srv/: Command.srv  Move.srv
0. Dummy_Example/src/tello_vision/: CMakeLists.txt  package.xml
0. Dummy_Example/src/tello_vision/src/: img_pub.py  img_sub (copy).py  img_sub.py
1.What is ROS/: README.md
2.Why do we want to use ros/: README.md
3. Workspace and packages/: CMakeLists.txt  README.md  creating_workspace.sh
4. ROS nodes and ways of executing code/: README.md  check_ros_master.py
5. Creating custom msg, srv, action/: CMakeLists.txt  README.md
6. Publishers and Subscribers/: README.md
7. Services/: README.md
8. Actions/: README.md
9. Usefull ROS tools/: README.md
